--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,12 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
+    "react-app-rewired": "^2.1.6",
     "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
